creacion de columnas, conexoin a la base de datos y mostrar vista de admin->product los productos con las nuevas columnas

--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -24,6 +24,14 @@
   <strong>Category:</strong>
   <%= @product.category.id %>
 </p>
+<p>
+  <strong>Price:</strong>
+  <%= @product.price %>
+</p>
+<p>
+  <strong>Description:</strong>
+  <%= @product.description %>
+</p>
 
 <%= link_to 'Edit', edit_admin_product_path(@product) %> |
 <%= link_to 'Back', admin_products_path %>
