--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -16,6 +16,8 @@
   <%= f.input :quantity %>
   <%= f.input :amount %>
   <%= f.association :category, include_blank: false %>
+  <%= f.input :price %>
+  <%= f.input :description %>
 
   <%= f.button :submit %>
 <% end %>
