--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -10,6 +10,9 @@
       <th>Quantity</th>
       <th>Amount</th>
       <th>Category</th>
+      <th>Price</th>
+      <th>Description</th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +25,8 @@
         <td><%= product.quantity %></td>
         <td><%= product.amount %></td>
         <td><%= product.category.id %></td>
+        <td><%= product.price %></td>
+        <td><%= product.description %></td>
         <td><%= link_to 'Show', admin_product_path(product) %></td>
         <td><%= link_to 'Edit', edit_admin_product_path(product) %></td>
         <td><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
