--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,6 +18,8 @@
         <td><%= product.name %></td>
         <td><%= product.url %></td>
         <td><%= product.category.name %></td>
+        <td><%= product.price %></td>
+        <td><%= product.description %></td>
         <td><%= link_to 'Show', product %></td>
       </tr>
     <% end %>
