--- a/app/views/customer/home/index.html.erb
+++ b/app/views/customer/home/index.html.erb
@@ -1,5 +1,11 @@
-<h1>Home Customer</h1>
+<div class="container cont">
 
-<ul>
-  <li><%= link_to "Products", customer_products_path %></li>
-</ul>
+  <img src="/assets/img/logo-color.png" class="responsive-img"/>
+
+  <ul>
+    <li class="waves-effect waves-light btn-large transparent">
+        <%= link_to "Té", customer_products_path %>
+    </li>
+  </ul>
+
+</div>
