--- a/app/views/shared/_logout.html.erb
+++ b/app/views/shared/_logout.html.erb
@@ -5,8 +5,10 @@
     </li>
   </ul>
   <nav>
-    <div class="nav-wrapper teal ">
-      <a href="#" class="brand-logo center">Logo</a>
+    <div class="nav-wrapper blue-grey darken-3 ">
+      <a href="#" class="brand-logo center">
+        <img src="/assets/img/logo-white.png" class="responsive-img logo"/> 
+      </a>
       <ul id=" nav-mobile" class="left ">
         <% if current_user.customer? %>
           <li>
@@ -27,11 +29,18 @@
             </li>
             <% end%>
       </ul>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <ul id="nav-mobile1" class="right hide-on-med-and-down">
         <li>
           <a class="dropdown-button" href="#!" data-activates="dropdown1">
             <%=current_user.email %>
               <i class="material-icons right">arrow_drop_down</i>
+          </a>
+        </li>
+      </ul>
+      <ul id="nav-mobile2" class="right hide-on-large-only">
+        <li>
+          <a class="dropdown-button" href="#!" data-activates="dropdown1">
+              <i class="material-icons right">menu</i>
           </a>
         </li>
       </ul>
