--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,25 @@
-<nav>
-  <div class="nav-wrapper teal ">
-    <a href="#" class="brand-logo center">Logo</a>
-    <ul id=" nav-mobile" class="left ">
-      <%= link_to  "Home", unauthenticated_root_path %>
-    </ul>
-    <ul id=" nav-mobile" class="left ">
-        <%= link_to  "Products", products_path %>
+<footer>
+  <nav>
+    <div class="nav-wrapper blue-grey darken-3 ">
+      <a href="#" class="brand-logo center">
+        <img src="/assets/img/logo-white.png" class="responsive-img logo"/>       
+      </a>
+      <ul id=" nav-mobile" class="left ">
+        <%= link_to  "Home", unauthenticated_root_path %>
       </ul>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li>
-        <a class="dropdown-button" href="#!" data-activates="dropdown1">
-        </a>
-      </li>
-      <li>
-        <a href="<%= new_user_session_path %>">Sign in</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+      <ul id=" nav-mobile" class="left ">
+          <%= link_to  "Products", products_path %>
+        </ul>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li>
+          <a class="dropdown-button" href="#!" data-activates="dropdown1">
+          </a>
+        </li>
+        <li>
+          <a href="<%= new_user_session_path %>">Sign in</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</footer>
+
