nav bar responsive

--- a/app/views/customer/home/index.html.erb
+++ b/app/views/customer/home/index.html.erb
@@ -1,10 +1,13 @@
 <div class="container cont">
 
-  <img src="/assets/img/logo-color.png" class="responsive-img"/>
+  <img src="/assets/img/logo-color.png" class="responsive-img logocolor"/>
 
   <ul>
-    <li class="waves-effect waves-light btn-large transparent">
-        <%= link_to "Té", customer_products_path %>
+    <li >
+      <a class="waves-effect waves-light btn-large transparent" href="<%= customer_products_path %>">
+        <img src="/assets/img/teadark.png" class="responsive-img icon"/>
+        <span>Té</span>
+      </a>
     </li>
   </ul>
 
