--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -36,10 +36,14 @@
 
 .cont > * {
   padding: 2em;
+  text-align: center;
   // margin: 2em;
 }
 
 li a {
+  color: gray;
+}
+li a span {
   color: gray;
 }
 
@@ -51,3 +55,14 @@ h3 {
   height: 2em !important;
 }
 
+.logocolor {
+  width: 80%;
+  // height: 3em;
+  align-self: center;
+  margin-top: 2em;
+  
+}
+
+.icon {
+  height: 1.5em !important;
+}
