--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,40 +1,56 @@
-<p id="notice"><%= notice %></p>
+<section>
+  <p id="notice"><%= notice %></p>
+  <div class="container">
+    <div class="row">
+      <div class="col s2 left-align">
+        <%= image_tag("icons/user-gray.png", height: '80') %>
+      </div>
+      <div class="col s7 left-align">
+        <h5>¡Bienvenido! <%= current_user.email %></h5>
+      </div>
+      <div class="col s3 right-align">
+        <%= image_tag("logos/logo-color.png", height: '100') %>
+      </div>
+    </div>
+  <p>Home > Productos</p1>
 
-<h1>Listing Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Url</th>
-      <th>Quantity</th>
-      <th>Amount</th>
-      <th>Category</th>
-      <th>Price</th>
-      <th>Description</th>
-
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= product.name %></td>
-        <td><%= product.url %></td>
-        <td><%= product.quantity %></td>
-        <td><%= product.amount %></td>
-        <td><%= product.category.id %></td>
-        <td><%= product.price %></td>
-        <td><%= product.description %></td>
-        <td><%= link_to 'Show', admin_product_path(product) %></td>
-        <td><%= link_to 'Edit', edit_admin_product_path(product) %></td>
-        <td><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Url</th>
+        <th>Quantity</th>
+        <th>Amount</th>
+        <th>Category</th>
+        <th>Price</th>
+        <th>Description</th>
+
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <td><%= product.name %></td>
+          <td><%= product.url %></td>
+          <td><%= product.quantity %></td>
+          <td><%= product.amount %></td>
+          <td><%= product.category.id %></td>
+          <td><%= product.price %></td>
+          <td><%= product.description %></td>
+          <td><%= link_to 'Show', admin_product_path(product) %></td>
+          <td><%= link_to 'Edit', edit_admin_product_path(product) %></td>
+          <td><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Product', new_admin_product_path %>
+  <br>
+
+  <%= link_to new_admin_product_path do %>
+    <%= image_tag("icons/productos-drk.png", height: '30') %>
+  <% end %>
+  </div>
+</section>
