--- a/app/views/home/unregistered.html.erb
+++ b/app/views/home/unregistered.html.erb
@@ -1,5 +1,9 @@
-<h1>Home</h1>
+<div class="container">
+  <h1 class="center-align">Tea Time</h1>
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus, deserunt sit provident cupiditate quia voluptas asperiores, aliquam, maiores perspiciatis soluta eveniet esse nostrum corrupti nisi velit in incidunt officiis et?</p>
+<p class="center-align">Somos un equipo de personas enfocadas al mejoramiento continuo para mejorar día a día nuestros productos</p>
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus, deserunt sit provident cupiditate quia voluptas asperiores, aliquam, maiores perspiciatis soluta eveniet esse nostrum corrupti nisi velit in incidunt officiis et?</p>
+<p class="center-align">Nuestro principal propósito es hacer que nuestros clientes disfruten de un producto de buena calidad y nos recomienden</p>
+
+<%= image_tag("logos/logo-color.png", height: '100') %>
+</div>
