--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,4 +1,5 @@
-<%= simple_form_for [:admin, @category] do |f| %>
+<div class="container">
+  <%= simple_form_for [:admin, @category] do |f| %>
   <% if @category.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
@@ -18,3 +19,5 @@
 
   <%= f.button :submit %>
 <% end %>
+
+</div>
