--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,9 @@
+<div class="container">
 <h1>Editing Category</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', [:admin, @category] %> |
 <%= link_to 'Back', admin_categories_path %>
+
+</div>
