--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
 <h1>Listing Categories</h1>
 
@@ -28,4 +29,8 @@
 
 <br>
 
-<%= link_to 'New Category', new_admin_category_path %>
+<div class="btn-white btn">
+  <%= link_to 'New Category', new_admin_category_path %>
+</div>
+
+</div>
