--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Category</h1>
+<div class="container">
+  <h1>New Category</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', admin_categories_path %>
+
+</div>
