--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
@@ -17,3 +18,5 @@
 
 <%= link_to 'Edit', edit_admin_category_path(@category) %> |
 <%= link_to 'Back', admin_categories_path %>
+
+</div>
